src/tui/app/snapshots/revu__tui__app__tests__queue_stack_120.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 26)"
---
╭ Queue · acme/widgets ──────────╮╭ Review ────────────────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                                    │
│ ▎ feat charge cards at chec…   ││                                                                                    │
│ ▎ omar · !42 · +412 −38     2h ││                                                                                    │
│                                ││                                                                                    │
│   ── MINE · 1 ──────────────── ││                                                                                    │
│   fix flaky cache test       D ││                                                                                    │
│   nina · !41 · +3 −1        4h ││                                                                                    │
│                                ││                                                                                    │
│   ── WATCHING · 0 ──────────── ││                                                                                    │
│                                ││                                                                                    │
│   ── OPEN · 4 ──────────────── ││                                open a merge request                                │
│   chore bump deps              ││                                to read its diff here                               │
│   lea · !51 · +412 −38      2h ││                                                                                    │
│   ▸ feat read shared PDFs    ✗ ││                                                                                    │
│     romain · 3 MRs · stack  2h ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DRAFTS · 1 ──────────── ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DONE · 1 ────────────── ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                                               ? help
