src/tui/app/snapshots/revu__tui__app__tests__queue_stack_compact_120.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 20)"
---
╭ Queue · acme/widgets ──────────╮╭ Review ────────────────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                                    │
│   !42 feat: charge cards at…   ││                                                                                    │
│                                ││                                                                                    │
│   ── MINE · 1 ──────────────── ││                                                                                    │
│   !41 fix: flaky cache test  D ││                                                                                    │
│                                ││                                                                                    │
│   ── WATCHING · 0 ──────────── ││                                                                                    │
│                                ││                                open a merge request                                │
│   ── OPEN · 4 ──────────────── ││                                to read its diff here                               │
│   !51 chore: bump deps         ││                                                                                    │
│ ▎ ▾ romain · 3 MRs · read s… ✗ ││                                                                                    │
│   │ !61 feat: read shared P…   ││                                                                                    │
│   │ !62 feat: read shared P… ✗ ││                                                                                    │
│   │ !63 feat: read shared P…   ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DRAFTS · 1 ──────────── ││                                                                                    │
│                                ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                                               ? help
