src/tui/app/snapshots/revu__tui__app__tests__queue_with_other.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 30)"
---
╭ Queue · acme/widgets ──────────╮╭ Review ────────────────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                                    │
│ ▎ feat charge cards at chec…   ││                                                                                    │
│ ▎ omar · !42 · +412 −38     2h ││                                                                                    │
│                                ││                                                                                    │
│   ── MINE · 1 ──────────────── ││                                                                                    │
│   fix flaky cache test       D ││                                                                                    │
│   nina · !41 · +3 −1        4h ││                                                                                    │
│                                ││                                                                                    │
│   ── WATCHING · 0 ──────────── ││                                                                                    │
│                                ││                                                                                    │
│   ── OPEN · 2 ──────────────── ││                                                                                    │
│   feat charge cards at chec…   ││                                                                                    │
│   kim · !53 · +412 −38      2h ││                                open a merge request                                │
│   feat charge cards at chec…   ││                                to read its diff here                               │
│   omar · !52 · +412 −38     2h ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DRAFTS · 1 ──────────── ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ DONE · 1 ────────────── ││                                                                                    │
│                                ││                                                                                    │
│   ── ▸ OTHER · 1 ───────────── ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                                               ? help
