src/tui/app/snapshots/revu__tui__app__tests__review_peek_before.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 160, 24)"
---
╭ Queue · all ─────────────────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ───────────────────── ││   BEFORE  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ success                                         │
│ ▎ feat charge cards at checkout          ││   1 of 2 approvals · 3 threads, 1 unresolved                                                                     │
│ ▎ omar · !42 · +412 −38               2h ││  ◆ 1 on the MR  enter opens                                                                                      │
│                                          ││                                                                                                                  │
│   ── MINE · 1 ────────────────────────── ││ ▎▾ src/pay/charge.rs                                                                      +4 −2  ✓1 · 1 outdated │
│   fix flaky cache test                 D ││     ▾ @@ -12,4 +12,5 @@ pub async fn charge                                                                      │
│   nina · !41 · +3 −1                  4h ││      12       pub async fn charge(card: &Card, amount: Money) -> Result<Receipt> {                               │
│                                          ││  ✓   13           let client = Client::new();                                                                    │
│   ── WATCHING · 1 ────────────────────── ││      14           let response = client.charge(amount).await?;                                                   │
│   infra: new runner                    ⠋ ││      15           audit::record(&response);                                                                      │
│   omar · !35 · +0 −0                  2d ││     ▾ @@ -40,3 +41,4 @@ fn idempotency_key                                                                       │
│                                          ││      40       fn idempotency_key(card: &Card) -> Key {                                                           │
│   ── ▸ DONE · 1 ──────────────────────── ││      41           Key::from(card.number())                                                                       │
│                                          ││      42       }                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││  ▸ Cargo.lock                                                                                      +1 −1  folded │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
╰──────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ✓ before                                                                                                                                                ? help
